--- a/client/components/home/home.component.html
+++ b/client/components/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            
+            <ts-sidebar></ts-sidebar>
         </div>
 
         <div class="col-md-9">
