logout from header added

--- a/client/components/header-navigation.component.html
+++ b/client/components/header-navigation.component.html
@@ -23,7 +23,7 @@
           <ul class="dropdown-menu">
             <li><a href="#">User Profile</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Logout</a></li>
+            <li><a (click)="logout()">Logout</a></li>
           </ul>
         </li>
       </ul>
