--- a/client/components/header-navigation.component.html
+++ b/client/components/header-navigation.component.html
@@ -19,7 +19,7 @@
         <li><a href="#"><i class="glyphicon glyphicon-bell"></i></a></li>
         <li><a href="#"><i class="glyphicon glyphicon-cog"></i></a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Mark Kovalski <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="header-person" role="button" aria-haspopup="true" aria-expanded="false">John Doe <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">User Profile</a></li>
             <li role="separator" class="divider"></li>
