--- a/client/components/header-navigation.component.html
+++ b/client/components/header-navigation.component.html
@@ -8,15 +8,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Test Storage</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       
-    
+    <ul class="nav navbar-nav navbar-left">
+      <li><a id="menu_toggle" href="#"><i class="fa fa-bars"></i></a></li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><i class="glyphicon glyphicon-bell"></i></a></li>
+        
+        
+        <li><a href="#" class="icon-info">
+            <i class="fa fa-bell" aria-hidden="true"></i>
+              <span class="label label-primary">3</span>
+            </a>
+        </li>
         <li><a href="#"><i class="glyphicon glyphicon-cog"></i></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="header-person" role="button" aria-haspopup="true" aria-expanded="false">John Doe <span class="caret"></span></a>
