sidebar changes added

--- a/client/components/home/home.component.html
+++ b/client/components/home/home.component.html
@@ -4,11 +4,13 @@
     
     <ts-header-nav></ts-header-nav>
 
-    <div id="content" style="min-height: 916px; margin: 20px; ">
+<section id="content-wrapper">
+    <div id="content" style="min-height: 916px; margin: 20px;">
 
         <router-outlet>
             <h2>Content will be here</h2>
             <p>Some content</p>
         </router-outlet>
     </div>
+</section>
 </div>
