#17 sidebar collapsed styles init + collapsing from header component

--- a/client/components/header-navigation.component.html
+++ b/client/components/header-navigation.component.html
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       
     <ul class="nav navbar-nav navbar-left">
-      <li><a id="menu_toggle" href="#"><i class="fa fa-bars"></i></a></li>
+      <li><a id="menu_toggle" (click)="collapseToggle();" href="#"><i class="fa fa-bars"></i></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
