--- a/client/components/sidebar/sidebar.component.html
+++ b/client/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
-<div class="navbar navbar-inverse navbar-fixed-left">
+<div class="navbar navbar-inverse navbar-fixed-left" [class.navbar-mini]="sidebarCollapsed">
   <a class="navbar-brand" href="#">Test Storage</a>
   <ul class="nav navbar-nav">
-    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><!--<i class="fa fa-dashboard"></i>-->Dashboard <span class="fa fa-chevron-down"></span></a>
+    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-dashboard"></i>Dashboard <span class="fa fa-chevron-down"></span></a>
       <ul class="dropdown-menu" role="menu">
         <li><a href="#">Sub Menu1</a></li>
         <li><a href="#">Sub Menu2</a></li>
@@ -11,9 +11,9 @@
         <li><a href="#">Sub Menu5</a></li>
       </ul>
     </li>
-    <li><a href="#">Projects</a></li>
-    <li><a href="#">Testcases</a></li>
-    <li><a href="#">Test Executions</a></li>
-    <li><a href="#">Reports</a></li>
+    <li><a href="#"><i class="fa fa-folder-o"></i>Projects</a></li>
+    <li><a href="#"><i class="fa fa-inbox"></i>Testcases</a></li>
+    <li><a href="#"><i class="fa fa-history"></i>Test Executions</a></li>
+    <li><a href="#"><i class="fa fa-bar-chart-o"></i>Reports</a></li>
   </ul>
 </div>
