--- a/src/app/components/header-navigation/header-navigation.component.html
+++ b/src/app/components/header-navigation/header-navigation.component.html
@@ -2,7 +2,8 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+        aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -12,17 +13,18 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      
-    <ul class="nav navbar-nav navbar-left">
-      <li><a id="menu_toggle" (click)="collapseToggle();" href="#"><i class="fa fa-bars"></i></a></li>
+
+      <ul class="nav navbar-nav navbar-left">
+        <li><a id="menu_toggle" (click)="collapseToggle();"><i class="fa fa-bars"></i></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        
-        
-        <li><a href="#" class="icon-info">
+
+
+        <li>
+          <a href="#" class="icon-info">
             <i class="fa fa-bell" aria-hidden="true"></i>
-              <span class="label label-primary">3</span>
-            </a>
+            <span class="label label-primary">3</span>
+          </a>
         </li>
         <li><a href="#"><i class="glyphicon glyphicon-cog"></i></a></li>
         <li class="dropdown">
@@ -34,6 +36,8 @@
           </ul>
         </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
 </nav>
