Migration from layoutComponent to LayoutModule

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -2,7 +2,7 @@
 
 <div id="section" class="sidebar-full" [class.sidebar-collapsed]="sidebarCollapsed">
 
-    <app-header-nav (notify)="onNotify($event)"></app-header-nav>
+    <app-header (notify)="onNotify($event)"></app-header>
 
     <section id="content-wrapper">
         <div id="content" style="min-height: 916px;">
