testcases, reports, test executions modules and components created, routes added

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -7,10 +7,7 @@
     <section id="content-wrapper">
         <div id="content" style="min-height: 916px;">
 
-            <router-outlet>
-                <h2>Content will be here</h2>
-                <p>Some content</p>
-            </router-outlet>
+            <router-outlet></router-outlet>
         </div>
     </section>
 </div>
