--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -26,13 +26,13 @@
             <span class="label label-primary">3</span>
           </a>
         </li>
-        <li><a href="#"><i class="glyphicon glyphicon-cog"></i></a></li>
+        <li><a routerLink="/settings"><i class="glyphicon glyphicon-cog"></i></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="header-person" role="button" aria-haspopup="true" aria-expanded="false">John Doe <span class=" fa fa-angle-down"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">User Profile</a></li>
+            <li><a routerLink="/profile"><i class="fa fa-user"></i> User Profile</a></li>
             <li role="separator" class="divider"></li>
-            <li><a (click)="logout()">Logout</a></li>
+            <li><a (click)="logout()"><i class="fa fa-power-off"></i> Logout</a></li>
           </ul>
         </li>
       </ul>
