--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -30,9 +30,9 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="header-person" role="button" aria-haspopup="true" aria-expanded="false">John Doe <span class=" fa fa-angle-down"></span></a>
           <ul class="dropdown-menu">
-            <li><a routerLink="/profile"><i class="fa fa-user"></i> User Profile</a></li>
+            <li><a routerLink="/profile"><i class="fa fa-user"></i> {{ 'HEADER.USER_PROFILE' | translate }}</a></li>
             <li role="separator" class="divider"></li>
-            <li><a (click)="logout()"><i class="fa fa-power-off"></i> Logout</a></li>
+            <li><a (click)="logout()"><i class="fa fa-power-off"></i> {{ 'HEADER.LOGOUT' | translate }}</a></li>
           </ul>
         </li>
       </ul>
