--- a/src/app/modules/layout/header/header.component.css
+++ b/src/app/modules/layout/header/header.component.css
@@ -11,6 +11,7 @@
     top: 2px;
     right: 26px;
     color: #7a7f8c;
+    cursor: pointer;
 }
 
 .fa-power-off, .fa-user {
@@ -19,6 +20,7 @@
 
 .icon-info {
     position: relative;
+    cursor: pointer;
 }
 .navi i {
     font-size: 20px;
