--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -21,14 +21,14 @@
 
 
         <li>
-          <a href="#" class="icon-info">
+          <a class="icon-info">
             <i class="fa fa-bell" aria-hidden="true"></i>
             <span class="label label-primary">3</span>
           </a>
         </li>
         <li><a routerLink="/settings"><i class="glyphicon glyphicon-cog"></i></a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="header-person" role="button" aria-haspopup="true" aria-expanded="false">John Doe <span class=" fa fa-angle-down"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" id="header-person" role="button" aria-haspopup="true" aria-expanded="false">John Doe <span class=" fa fa-angle-down"></span></a>
           <ul class="dropdown-menu">
             <li><a routerLink="/profile"><i class="fa fa-user"></i> {{ 'HEADER.USER_PROFILE' | translate }}</a></li>
             <li role="separator" class="divider"></li>
