--- a/src/app/modules/layout/sidebar/sidebar.component.html
+++ b/src/app/modules/layout/sidebar/sidebar.component.html
@@ -1,5 +1,8 @@
 <div class="navbar navbar-inverse navbar-fixed-left" [class.navbar-mini]="sidebarCollapsed">
-  <a class="navbar-brand" routerLink="/">Test Storage</a>
+  <a class="navbar-brand" routerLink="/">
+    <span class="logo-strong">Test</span>
+    <span class="logo-text">Storage</span>
+  </a>
   <ul class="nav navbar-nav">
     <li [class.active]=""><a routerLink="/dashboard"><i class="fa fa-dashboard"></i><span class="sidebar-title">{{ 'SIDEBAR.DASHBOARD' | translate }}</span><!--<span class="fa fa-chevron-down"></span>--></a>
       <!-- <li class="dropdown" class="dropdown-toggle" data-toggle="dropdown">-->
