#46 Test suites tree component initial

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -5,7 +5,7 @@
     <app-header (notify)="onNotify($event)"></app-header>
 
     <section id="content-wrapper">
-        <div id="content" style="min-height: 916px;">
+        <div id="content">
 
             <router-outlet></router-outlet>
         </div>
