small changes in testsuite tree component

--- a/src/app/modules/testcases/testcases.component.html
+++ b/src/app/modules/testcases/testcases.component.html
@@ -1,4 +1,4 @@
 <div *ngFor="let testcase of testcases">
   {{ testcase.title }}
 </div>
-<app-testcase-tree></app-testcase-tree>
+<app-testsuites-tree></app-testsuites-tree>
