fix route error handing (logging) fix generate unique id for _id, fix header appending (now setting), migrate from jwt-simple to jsonwebtokens,

--- a/src/app/modules/projects/projects.component.html
+++ b/src/app/modules/projects/projects.component.html
@@ -1,3 +1,6 @@
-<div *ngFor="let project of projects">
-  {{ project.name }}
-</div>
+<ng-template [ngIf]="projects">
+  <div *ngFor="let project of projects">
+    {{ project.name }}
+  </div>
+</ng-template>
+<!--<app-project></app-project>-->
