testcases CRUD init

--- a/src/app/modules/testcases/testcases.component.html
+++ b/src/app/modules/testcases/testcases.component.html
@@ -1,4 +1,7 @@
 <div id="wrapper" *ngIf="testcases">
+
+  <a class="btn btn-primary">Create New Testcase</a>
+
   <table class="table table-striped" >
     <thead>
       <tr>
