router animations added

--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -1,3 +1,11 @@
-<p>
-  profile works!
-</p>
+<div id="wrapper">
+  <div class="profile-data">
+    <img class="avatar-image" src="assets/noavatar.png" />
+  </div>
+  <div class="profile-info">
+    <div class="profile-work"></div>
+    <div class="profile-personal"></div>
+
+  </div>
+
+</div>
