--- a/src/app/modules/settings/settings.component.html
+++ b/src/app/modules/settings/settings.component.html
@@ -1,3 +1,8 @@
-<p>
-  settings works!
-</p>
+<h1>Settings</h1>
+
+<div>
+  <label>{{ 'SETTINGS.CHOOSE_LANGUAGE' | translate }}</label>
+  <select #langSelect (change)="translate.use(langSelect.value)">
+          <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang }}</option>
+        </select>
+</div>
