--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -1,43 +1,25 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-        aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+<header>
+<nav class="navigation-bar">
+  
+    <a id="menu_toggle" class="toggle" (click)="collapseToggle();"><i class="fa fa-bars"></i></a>
+    <div class="left">
+      
     </div>
+    <div class="right">
+      <a class="icon-info link"><i class="fa fa-bell" aria-hidden="true"></i><span class="label label-primary">3</span></a>
+      <a class="link" routerLink="/settings"><i class="glyphicon glyphicon-cog"></i></a>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-      <ul class="nav navbar-nav navbar-left">
-        <li><a id="menu_toggle" (click)="collapseToggle();"><i class="fa fa-bars"></i></a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-
-
-        <li>
-          <a class="icon-info">
-            <i class="fa fa-bell" aria-hidden="true"></i>
-            <span class="label label-primary">3</span>
-          </a>
-        </li>
-        <li><a routerLink="/settings"><i class="glyphicon glyphicon-cog"></i></a></li>
-        <li class="dropdown">
+      <!-- TODO refactor -->
+      <li class="link dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" id="header-person" role="button" aria-haspopup="true" aria-expanded="false">{{ user.firstName }} {{ user.lastName }} <span class=" fa fa-angle-down"></span></a>
           <ul class="dropdown-menu">
             <li><a routerLink="/profile"><i class="fa fa-user"></i> {{ 'HEADER.USER_PROFILE' | translate }}</a></li>
             <li role="separator" class="divider"></li>
             <li><a (click)="logout()"><i class="fa fa-power-off"></i> {{ 'HEADER.LOGOUT' | translate }}</a></li>
           </ul>
-        </li>
-      </ul>
+      </li>
+
     </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container-fluid -->
-</nav>
+  
+</nav>  
+</header>
