--- a/src/app/modules/layout/layout.component.css
+++ b/src/app/modules/layout/layout.component.css
@@ -1,6 +1,14 @@
+body {
+    height: 100%;
+}
 
-#section {
+#wrapper {
+    display: flex;
+}
+#main {
     z-index: 1;
+    flex: 1;
+    height: 100%;
 }
 
 .sidebar-full{
@@ -12,8 +20,6 @@
 }
 
 #content-wrapper {
-    position: relative;
-    bottom: 20px;
     border: 1px solid transparent;
     background-color: #EAEAEA;
 }
@@ -21,5 +27,16 @@
 #content {
     background-color: #FFF;
     margin: 20px;
-    min-height: 916px;
+    height: 100%;
+    min-height: 640px;
+}
+
+@media (max-width: 800px) {
+  
+  .sidebar-collapsed {
+      padding-left: 0 !important;
+  }
+  #wrapper {
+    flex-direction: column;
+  }
 }
