--- a/src/app/modules/layout/header/header.component.css
+++ b/src/app/modules/layout/header/header.component.css
@@ -21,6 +21,8 @@
   padding: 1em;
   color: #7a7f8c;
   vertical-align: middle;
+  position: relative;
+  left: 7px;
 }
 
 @media (min-width: 48em) {
