feat(Notification): notification in dropdown menu

--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -1,25 +1,34 @@
 <header>
-<nav class="navigation-bar">
-  
-    <a id="menu_toggle" class="toggle" (click)="collapseToggle();"><i class="fa fa-bars"></i></a>
+  <nav class="navigation-bar">
+
+
     <div class="left">
-      
+      <a id="menu_toggle" class="toggle" (click)="collapseToggle();"><i class="fa fa-bars"></i></a>
     </div>
     <div class="right">
-      <a class="icon-info link"><i class="fa fa-bell" aria-hidden="true"></i><span class="label label-primary">3</span></a>
+      
+      <a class="icon-info link dropbtn" (click)="toggleNotifications();"><i class="fa fa-bell" aria-hidden="true"></i><span class="label label-primary">3</span></a>
+      <div class="dropdown-content" [class.show]="isNotificationsDisplayed">
+        <ul>
+          <app-notifications></app-notifications>
+        </ul>
+      </div>
+      
       <a class="link" routerLink="/settings"><i class="glyphicon glyphicon-cog"></i></a>
 
-      <!-- TODO refactor -->
-      <li class="link dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" id="header-person" role="button" aria-haspopup="true" aria-expanded="false">{{ user.firstName }} {{ user.lastName }} <span class=" fa fa-angle-down"></span></a>
-          <ul class="dropdown-menu">
+
+
+
+      <li class="link dropdown-item">
+        <a class="dropbtn" (click)="toggleDropdown();">{{ user.firstName }} {{ user.lastName }} <span class="fa fa-angle-down" [class.chevron-rotated]="isDropdownDisplayed"></span></a>
+        <div class="dropdown-content" [class.show]="isDropdownDisplayed">
+          <ul>
             <li><a routerLink="/profile"><i class="fa fa-user"></i> {{ 'HEADER.USER_PROFILE' | translate }}</a></li>
-            <li role="separator" class="divider"></li>
             <li><a (click)="logout()"><i class="fa fa-power-off"></i> {{ 'HEADER.LOGOUT' | translate }}</a></li>
           </ul>
+        </div>
       </li>
-
     </div>
-  
-</nav>  
+
+  </nav>
 </header>
