--- a/src/app/modules/layout/notifications/notifications.component.html
+++ b/src/app/modules/layout/notifications/notifications.component.html
@@ -1,3 +1,11 @@
-<p>
-  notifications works!
-</p>
+<div class="notifications">
+  <div class="header">Header</div>
+  <div class="notifications-container">
+    <ul>
+      <li>Notification 1</li>
+      <li>Notification 1</li>
+      <li>Notification 1</li>
+    </ul>
+  </div>
+  <div class="footer">Show More...</div>
+</div>
